WIP: proof of concept complete

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -25,6 +25,10 @@
 #   unused-packages = true
 
 
+[[constraint]]
+  name = "github.com/nlopes/slack"
+  branch = "master"
+
 [prune]
   go-tests = true
   unused-packages = true
