--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -26,8 +26,8 @@
 
 
 [[constraint]]
-  name = "github.com/nlopes/slack"
-  branch = "master"
+  name = "github.com/tylarb/slack"
+  branch = "reply-to"
 
 [prune]
   go-tests = true
