WIP: basic cache framework built; back to using nlopes/slack as feature is now included in master; cleaned up Ephemeral post because *rtm is globally defined

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -26,8 +26,8 @@
 
 
 [[constraint]]
-  name = "github.com/tylarb/slack"
-  branch = "reply-to"
+  name = "github.com/nlopes/slack"
+  branch = "master"
 
 [prune]
   go-tests = true
